fixed chat spacing
fixed chat spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -257,7 +257,7 @@ div {
   border-bottom-right-radius: 0;
   text-align: left;
   display: inline-block;
-  margin: 0 4rem;
+  margin: 0.3rem 4rem;
   min-width: 2.5rem;
 }
 
